# open-world-agents

./: pyproject.toml
projects/mcap-owa-support/: pyproject.toml
projects/owa-cli/: pyproject.toml
projects/owa-cli/owa/cli/mcap/migrate/migrators/: README.md  v0_2_0_to_v0_3_0.py  v0_3_0_to_v0_3_2.py  v0_3_2_to_v0_4_2.py  v0_4_2_to_v0_5_0.py  v0_5_0_to_v0_5_1.py  v0_5_1_to_v0_5_5.py  v0_5_5_to_v0_5_6.py
projects/owa-core/: pyproject.toml
projects/owa-core/misc/: lifecycle_node.py
projects/owa-core/owa/core/: listener.py  message.py  runnable.py
projects/owa-core/owa/core/io/video/: reader.py
projects/owa-data/: pyproject.toml
projects/owa-data/owa/data/: collator.py
projects/owa-data/owa/data/datasets/: config.py
projects/owa-data/scripts/conversion/CS_DM/: convert_to_owamcap.py
projects/owa-data/scripts/conversion/VPT/: vpt_to_owamcap.py
projects/owa-env-desktop/: pyproject.toml
projects/owa-env-example/: pyproject.toml
projects/owa-env-gst/: pyproject.toml
projects/owa-env-gst/owa/env/gst/: mkv_reader.py
projects/owa-msgs/: pyproject.toml
projects/owa-msgs/owa/msgs/desktop/: screen.py
projects/video-decoding-server/: pyproject.toml
projects/video-decoding-server/scripts/litserve/: decoding_server.py  decoding_server_cv2.py  decoding_server_torchcodec.py
scripts/release/: main.py
