[project]
name = "mcap-owa-support"
dynamic = ["version"]
description = "OWA support for the Python MCAP library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "owa-core @ file:../owa-core",
    "mcap>=1.0.0",
    "orjson",
    "packaging>=20.0",
    "pydantic>=2.0",
    "requests>=2.32.2",
    "typing-extensions",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcap_owa"]

[tool.hatch.version]
path = "mcap_owa/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
