[project]
name = "owa-cli"
version = "0.6.5"
description = "Command-line tools for Open World Agents data analysis and management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "mcap-owa-support @ git+https://github.com/lastdefiance20/open-world-agents.git@main#subdirectory=projects/mcap-owa-support",
    "mediaref~=0.4.1",
    "numpy>=2.0",
    "opencv-python",
    "orjson",
    "owa-core @ git+https://github.com/lastdefiance20/open-world-agents.git@main#subdirectory=projects/owa-core",
    "owa-msgs @ git+https://github.com/lastdefiance20/open-world-agents.git@main#subdirectory=projects/owa-msgs",
    "packaging>=20.0",
    "plotext",
    "pyyaml>=6.0",
    "requests>=2.32.2",
    "rich>=14.1.0",
    "tqdm",
    "typer>=0.20.0",
    "typing-extensions",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }
mcap-owa-support = { path = "../mcap-owa-support", editable = true }
owa-msgs = { path = "../owa-msgs", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[project.scripts]
owl = "owa.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
