[project]
name = "owa-data"
version = "0.1.0"
description = "Data handling and dataset utilities for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # OWA packages
    "mcap-owa-support @ git+https://github.com/lastdefiance20/open-world-agents.git@main#subdirectory=projects/mcap-owa-support",
    "mediaref~=0.4.1",
    "owa-core @ git+https://github.com/lastdefiance20/open-world-agents.git@main#subdirectory=projects/owa-core",
    "owa-msgs @ git+https://github.com/lastdefiance20/open-world-agents.git@main#subdirectory=projects/owa-msgs",
    # Core ML
    "datasets>=4.0",
    "huggingface_hub>=0.30.0",
    "torch>=2.0",
    "transformers>=4.52.1",
    # Utilities
    "fsspec",
    "jsonargparse[signatures]>=4.41.0",
    "line-profiler>=4.1.0",
    "loguru",
    "numpy>=2.0",
    "pillow>=9.4.0",
    "pydantic>=2.0",
    "tqdm",
    "typing-extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring network access (may be slow or unreliable)",
]

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }
owa-msgs = { path = "../owa-msgs", editable = true }
mcap-owa-support = { path = "../mcap-owa-support", editable = true }
