[project]
name = "owa-msgs"
version = "0.6.5"
description = "Core message definitions for Open World Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "annotated-types",
    "mediaref~=0.4.1",
    "numpy>=2.0",
    "opencv-python",
    "owa-core @ git+https://github.com/lastdefiance20/open-world-agents.git#subdirectory=projects/owa-core",
    "pydantic>=2.0",
    "typing-extensions>=4.6.0",
]

# entry points for message discovery
[project.entry-points."owa.msgs"]
"desktop/KeyboardEvent" = "owa.msgs.desktop.keyboard:KeyboardEvent"
"desktop/KeyboardState" = "owa.msgs.desktop.keyboard:KeyboardState"
"desktop/MouseEvent" = "owa.msgs.desktop.mouse:MouseEvent"
"desktop/MouseState" = "owa.msgs.desktop.mouse:MouseState"
"desktop/RawMouseEvent" = "owa.msgs.desktop.mouse:RawMouseEvent"
"desktop/PointerBallisticsConfig" = "owa.msgs.desktop.mouse:PointerBallisticsConfig"
"desktop/WindowInfo" = "owa.msgs.desktop.window:WindowInfo"
"desktop/ScreenCaptured" = "owa.msgs.desktop.screen:ScreenCaptured"

[tool.uv.sources]
owa-core = { path = "../owa-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring network access (may be slow or unreliable)",
]
